# noggin-messages

./: .cico.pipeline  .coveragerc  .gitignore  .mergify.yml  .packit.yaml  LICENSE  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json
.github/workflows/: dependabot-approve.yml  tests.yml
devel/: run-liccheck.sh
docs/: conf.py  index.rst
noggin_messages/: __init__.py
noggin_messages/tests/: test_schemas.py
packit/installation/: main.fmf
securitas_messages/: __init__.py
securitas_messages/tests/: test_schemas.py
