[tool.poetry]
name = "noggin-messages"
version = "0.0.1"
description = "Fedora Messaging message schemas for Noggin."

license = "MIT"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

# readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/fedora-infra/noggin-messages"
homepage = "https://github.com/fedora-infra/noggin-messages"

keywords = ['security']

include = [
    "tox.ini",
    "docs/*",
    "docs/*/*",
]

[tool.poetry.plugins."fedora.messages"]
"noggin.group.member.sponsor.v1"="noggin_messages:MemberSponsorV1"
"noggin.user.create.v1"="noggin_messages:UserCreateV1"
"noggin.user.update.v1"="noggin_messages:UserUpdateV1"


[tool.poetry.dependencies]
python = "^3.6"
fedora-messaging = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
sphinx = "^3.0"
mock = "^4.0"
bandit = "^1.6"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7"


[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
